--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cesium-measure",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "private": false,
   "main": "./dist/cesium-measure.common.js",
   "scripts": {
@@ -12,13 +12,17 @@
     "core-js": "^3.4.3",
     "vue": "^2.6.10"
   },
+  "files":["dist","README.md"],
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.1.0",
     "@vue/cli-plugin-eslint": "^4.1.0",
     "@vue/cli-service": "^4.1.0",
     "babel-eslint": "^10.0.3",
+    "element-ui": "^2.13.0",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
+    "node-sass": "^4.12.0",
+    "sass-loader": "^8.0.0",
     "vue-template-compiler": "^2.6.10"
   },
   "eslintConfig": {
